@@ -57,12 +57,6 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
-		<dependency>
-			<groupId>com.github.ulisesbocchio</groupId>
-			<artifactId>jasypt-spring-boot-starter</artifactId>
-			<version>2.1.2</version>
-		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -110,29 +104,28 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.3</version>
+				<version>0.7.5.201505241946</version>
 				<executions>
 					<execution>
-						<id>default-prepare-agent</id>
+						<id>jacoco-prepare-agent</id>
+						<configuration>
+							<includes>
+								<include>com/api/project/management/**</include>
+							</includes>
+						</configuration>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-						<configuration>
-							<propertyName>jacocoArgLine</propertyName>
-						</configuration>
 					</execution>
 					<execution>
-						<id>default-report</id>
+						<id>jacoco-report</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>default-check</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
+						<id>jacoco-check</id>
 						<configuration>
 							<haltOnFailure>true</haltOnFailure>
 							<rules>
@@ -153,17 +146,16 @@
 								<exclude>**/*model.*</exclude>
 							</excludes>
 						</configuration>
+						<goals>
+							<goal>check</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<forkCount>0</forkCount>
-					<argLine>@{jacocoArgLine} -Xmx1024m -Xms1024m -XX:MaxPermSize=512m
-						-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-				</configuration>
+				<version>2.18.1</version><!--$NO-MVN-MAN-VER$-->
 				<executions>
 					<execution>
 						<id>default-test</id>
